# MiniProject01

./: .gitignore  CMakeLists.txt  README.md  uml_diagram.md
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
build_test/coverage/src/: MusicLibrary.cpp.func-sort-c.html  MusicLibrary.cpp.func.html  MusicLibrary.cpp.gcov.html  MusicPlayer.cpp.func-sort-c.html  MusicPlayer.cpp.func.html  MusicPlayer.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
build_test/coverage/tests/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  test_MusicLibrary.cpp.func-sort-c.html  test_MusicLibrary.cpp.func.html  test_MusicLibrary.cpp.gcov.html  test_MusicPlayer.cpp.func-sort-c.html  test_MusicPlayer.cpp.func.html  test_MusicPlayer.cpp.gcov.html
docs/: PhuongTH33_CPP.Assignment 15_Opt 1.pptx
include/: AudioEngine.h  InputHandler.h  LoopSimulation.h  MusicLibrary.h  MusicPlayer.h  PlaybackHistory.h  PlaybackQueue.h  ShuffleManager.h  Song.h  Theme.h  UIComponents.h
include/imgui-master/: imgui_draw.cpp
src/: AudioEngine.cpp  InputHandler.cpp  LoopSimulation.cpp  MusicLibrary.cpp  MusicPlayer.cpp  PlaybackHistory.cpp  PlaybackQueue.cpp  ShuffleManager.cpp  Theme.cpp  UIComponents.cpp  main.cpp
tests/: README.md  test_MusicLibrary.cpp  test_MusicPlayer.cpp  test_main.cpp
